

@startuml

PCBuilder o-- AuthenticationService
PCBuilder o-- CartService
PCBuilder o-- OrderService
PCBuilder o-- PCComponentService


class PCBuilder {
run() : void
start() : void
}

class AuthenticationService{
login(credential : Credential) : User
register(user : User) : void
}

class CartService{
add(component : PCComponent) : void
remove(component : PCComponent) : void
calculateTotalPrice() : BigDecimal
}

class OrderService{
create(items : List<OrderItem>,user : User) : void
remove(order : Order) : void
complete(id : int) : void
listOrdersByUser(user : User) : List<Order>
}

class PCComponentService{
findAllComponents() : List<PCComponent>
findPCComponentByClass(Class<Extends PCComponent> : type) : List<Extends PCComponent>

}



@enduml